# sandbox

./: Cargo.toml  README.md
src/: block.rs  entity.rs  fs.glsl  lib.rs  main.rs  maths.rs  resource.rs  side.rs  timing.rs  util.rs  vertexattrib.rs  vs.glsl
src/entity/: camera.rs  player.rs  sector.rs
src/entity/sector/: data.rs  generation.rs  meshgen.rs
src/maths/: matrix.rs  vector.rs
src/util/: bool_vec.rs
