[package]
name = "sandbox"
version = "0.1.0"
authors = ["twetzel59 <twetzel59@gmail.com>"]
edition = "2018"

[dependencies]
glfw = "0.23"
luminance = { git = "https://github.com/phaazon/luminance-rs.git" }
luminance-glfw-custom = { git = "https://github.com/twetzel59/luminance-glfw-custom.git" }
luminance-derive = { git = "https://github.com/phaazon/luminance-rs.git" }
